[package]
name = "blur"
version = "0.1.0"
authors = ["John Axel Eriksson <john@insane.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.20"

[dependencies.image]
version = "0.23"
default-features = false
features = [
    "png",
    "pnm"
]

[profile.release]
debug = true
